fix horizontal scroll

--- a/src/app/modules/general-settings/general-settings.component.scss
+++ b/src/app/modules/general-settings/general-settings.component.scss
@@ -1,7 +1,3 @@
 app-settings {
     width: 100%;
 }
-
-.container-boxes {
-    overflow-x: scroll;
-}
